# glare-mute

./: .editorconfig  .gitignore  .npmrc  Cargo.toml  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml
.github/: release-body-signpath.md  release-body-unsigned.md
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lens.rs  lib.rs  logging.rs  main.rs  state.rs  tray.rs
apps/desktop/src-tauri/src/lens/: mod.rs  preview.rs
apps/desktop/src-tauri/src/lens/windows/: effects.rs  mod.rs  overlay.rs  windowing.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: ChoiceField.test.tsx  ChoiceField.tsx  PaneHeader.tsx  StatusChip.tsx
apps/desktop/src/features/effects/: EffectPane.tsx  SavedProfilesSection.tsx  effect-utils.ts
apps/desktop/src/lib/: contracts.ts  desktop-client.test.ts  desktop-client.ts  i18n.ts  theme.test.ts  theme.ts
apps/desktop/src/styles/: base.css  controls.css  index.css  layout.css  panels.css  responsive.css  theme.css  workflow.css
crates/glare-mute-core/: Cargo.toml
crates/glare-mute-core/src/: lib.rs
crates/glare-mute-platform/: Cargo.toml
crates/glare-mute-platform/src/: lib.rs
docs/: README.md  code-signing-policy.md  repo-map.md
docs/adr/: 0001-tauri-rust-react.md  0002-hybrid-lens-backends.md  0003-effect-surface-honesty.md
docs/architecture/: backend-strategy.md  overview.md  shell-and-theme.md
docs/contributing/: conventional-commits.md  development.md  releasing.md  testing.md
docs/operations/: debugging.md  windows-focus-flicker.md  windows-irpf-test.md
scripts/: agent-doctor.mjs  build-windows-release.ps1  commitlint-msg.mjs  generate_icons.py  playwright.mjs  pnpm.mjs  sync-topics.mjs
scripts/lib/: package-manager.mjs
tests/e2e/: theme.spec.ts
tests/e2e/product-shell/: appearance.spec.ts  layout.spec.ts
tests/e2e/support/: settings.ts
(+18 files in other folders)
