[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/glare-mute-core",
    "crates/glare-mute-platform",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/d0d1/glare-mute"
homepage = "https://github.com/d0d1/glare-mute"
authors = ["d0d1"]
rust-version = "1.93.1"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2.5.2" }
tauri-plugin-opener = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
