[package]
name = "glare-mute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
